# ym2151-tone-editor

./: .gitignore  Cargo.toml  NOTE_ON_VISUALIZATION.md  README.ja.md  README.md  README_generate_gm_templates.md  _config.yml  build.rs  generate_gm_templates.rs  ym2151-tone-editor.toml.example
.github/: copilot-instructions.md
.github/workflows/: build-wasm.yml  call-rust-windows-check.yml  deploy-demo-library.yml  rust-test.yml  windows-gnu-check.yml
core/: Cargo.toml
core/src/: lib.rs  tests.rs
demo-library/: index.html  random-tone.js
docs/: KEYBINDS.ja.md
generated-docs/: development-status-generated-prompt.md  development-status.md  project-overview-generated-prompt.md  project-overview.md
issue-notes/: 10.md  100.md  101.md  102.md  103.md  104.md  105.md  106.md  107.md  108.md  109.md  11.md  110.md  111.md  112.md  113.md  114.md  115.md  116.md  130.md  134.md  136.md  138.md  139.md  14.md  141.md  144.md  146.md  147.md  148.md  149.md  150.md  151.md  155.md  156.md  158.md  16.md  164.md  165.md  166.md  (+72 more)
src/: app.rs  app_init.rs  audio.rs  config.rs  event_loop.rs  favorites.rs  file_ops.rs  history.rs  history_selector.rs  logging.rs  main.rs  midi_conversion.rs  models.rs  random_tone.rs  register.rs  register_list.rs  ui.rs  updater.rs  variation_selector.rs  waveform.rs
src/app/: mod.rs  shortcuts.rs
src/tests/: app_adsr_mul_sm_tests.rs  app_ch_param_tests.rs  app_ks_ams_tests.rs  app_tests.rs  app_tl_d1l_dt_dt2_tests.rs  app_value_by_tests.rs  cli_tests.rs  event_loop_tests.rs  favorites_tests.rs  file_ops_tests.rs  history_tests.rs  midi_conversion_tests.rs  mod.rs  random_tone_tests.rs  register_roundtrip_tests.rs  register_tests.rs  ui_tests.rs  variation_selector_tests.rs  verbose_logging_tests.rs
src/ui/: help.rs  helpers.rs  mod.rs
tones/general_midi/: 000_AcousticGrand.json  tone_names.json
wasm/: Cargo.toml
wasm/src/: lib.rs
