[workspace]
members = [".", "core", "wasm"]

[package]
name = "ym2151-tone-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ym2151-tone-params = { path = "core" }
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
smf-to-ym2151log-rust = { git = "https://github.com/cat2151/smf-to-ym2151log-rust" }
clap = "4.5"
chrono = { version = "0.4", features = ["clock", "std"] }
fuzzy-matcher = "0.3"
anyhow = "1"
dirs = "5"
ureq = { version = "2", features = ["json"] }

[target.'cfg(windows)'.dependencies]
ym2151-log-play-server = { git = "https://github.com/cat2151/ym2151-log-play-server" }
