[workspace]
members = [".", "core", "wasm"]

[package]
name = "ym2151-tone-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ym2151-tone-params = { path = "core" }
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
smf-to-ym2151log-rust = { git = "https://github.com/cat2151/smf-to-ym2151log-rust" }
cat-self-update-lib = { git = "https://github.com/cat2151/cat-self-update", package = "cat-self-update-lib", rev = "e324426de0a3c219d1a63a939df93ff8f007916a" }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "std"] }
fuzzy-matcher = "0.3"
anyhow = "1"
dirs = "5"

[target.'cfg(windows)'.dependencies]
ym2151-log-play-server = { git = "https://github.com/cat2151/ym2151-log-play-server" }
